Fix empty header EC2 Instances

--- a/help_dialog_collapsed.html
+++ b/help_dialog_collapsed.html
@@ -143,9 +143,7 @@
 <div class="content">
 <p>This addon supplies multiple custom functions that you can invoke from a Google Sheets cell. To invoke a custom function (or any function), start by typing a &quot;<code>=AWS</code>&quot;. The sheets editor will popup a command completion dialog that searches as you type. All the functions here include parameter documentation that will appear when you&#39;ve selected a particular function and help describe the order of parameters.</p>
 <p>Functions are documented here without the required leading &quot;<code>=</code>&quot; for ease of reading.</p>
-</div><button type="button" class="collapsible">EC2 Instances</button>
-<div class="content">
-</div><button type="button" class="collapsible">Parameters</button>
+</div><button type="button" class="collapsible">EC2 Instance Parameters</button>
 <div class="content">
 <p>These define the parameters used in the following functions and instance settings.</p>
 <ul>
