Fix link to document in sidebar, should open new tab

--- a/help_dialog_collapsed.html
+++ b/help_dialog_collapsed.html
@@ -267,7 +267,7 @@ Both functions take the number of <em>iops</em> in the parameter <code>volumeSiz
 <p>Storage type can be &quot;aurora&quot;, &quot;gp2&quot;, &quot;piops&quot; and &quot;magnetic&quot;</p>
 </div><button type="button" class="collapsible">Backwards compatibility</button>
 <div class="content">
-<p>This add-on is compatible with a previous version, allowing you to continue using the function notation from that version in your sheets. However, note that the sheets editor&#39;s pop-up suggestion feature will not be available. For more information about the formulas from version 1, please refer to <a href="https://github.com/getmacroscope/aws-pricing/blob/master/Help.md">the following link</a></p> </div>
+<p>This add-on is compatible with a previous version, allowing you to continue using the function notation from that version in your sheets. However, note that the sheets editor&#39;s pop-up suggestion feature will not be available. For more information about the formulas from version 1, please refer to <a target="_blank" href="https://github.com/getmacroscope/aws-pricing/blob/master/Help.md">the following link</a></p> </div>
 </div>
 
 <div id="tooltip" display="none" style="position: absolute; display: none;"></div>
