Change color button Formula builder

--- a/formula_builder.html
+++ b/formula_builder.html
@@ -161,18 +161,17 @@
       font-size: 16px;
       font-family: Arial, sans-serif;
       color: #ffffff;
-      background-color: #3e8e41;
+      background-color: #372753;
       cursor: pointer;
       width: 100%;
       transition: background-color 0.3s ease;
     }
     button:focus {
       outline: none;
-      border-color: #4CAF50;
     }
     button:hover {
-      background-color: #59ca5d;
-      color:black;
+      background-color: #5c418a;
+      color: #e7def4;
     }
 
     .header {
