Fix scroll to bottom in formula builder when zoomed in

--- a/formula_builder.html
+++ b/formula_builder.html
@@ -11,6 +11,7 @@
     .App {
       width:285px;
       font-family: arial, sans-serif;
+      padding-bottom: 80px; /* footer is overlay and fixed */
     }
 
     .logolinks {
